--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,6 @@
 		</dependency>
 
 
-
 		<!-- read PDF files -->
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
@@ -42,6 +41,13 @@
 			<version>2.0.23</version>
 		</dependency>
 
+		<!-- for html parsing -->
+		<dependency>
+			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
+			<groupId>org.jsoup</groupId>
+			<artifactId>jsoup</artifactId>
+			<version>1.13.1</version>
+		</dependency>
 
 
 		<dependency>
