--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,8 @@
 	<description>Common stock classifications</description>
 
 	<properties>
-		<!-- minimum required java version -->
-		<java.version>1.8</java.version>
-
-		<jackson.version>2.12.3</jackson.version>
+		<java.version>1.8</java.version>  <!-- java _MUST_ be this version or newer -->
+		<jackson.version>2.13.1</jackson.version>
 		<apache.poi.version>4.1.0</apache.poi.version>
 	</properties>
 
@@ -38,7 +36,7 @@
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
-			<version>2.0.23</version>
+			<version>2.0.24</version>
 		</dependency>
 
 		<!-- for html parsing -->
@@ -46,20 +44,20 @@
 			<!-- jsoup HTML parser library @ https://jsoup.org/ -->
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
-			<version>1.13.1</version>
+			<version>1.14.3</version>
 		</dependency>
 
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-lang3</artifactId>
-			<version>3.10</version>
+			<version>3.12.0</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-collections4</artifactId>
-			<version>4.3</version>
+			<version>4.4</version>
 		</dependency>
 
 
@@ -92,14 +90,14 @@
 		<dependency>
 			<groupId>commons-io</groupId>
 			<artifactId>commons-io</artifactId>
-			<version>2.9.0</version>
+			<version>2.11.0</version>
 		</dependency>
 
 
 		<dependency>
 			<groupId>org.testng</groupId>
 			<artifactId>testng</artifactId>
-			<version>7.0.0</version>
+			<version>7.4.0</version>
 			<scope>test</scope>
 		</dependency>
 
